--- a/package.json
+++ b/package.json
@@ -27,12 +27,12 @@
     "@ionic-native/diagnostic": "^4.5.3",
     "@ionic-native/facebook": "^3.8.0",
     "@ionic-native/geolocation": "^4.5.3",
-    "@ionic-native/google-maps": "^4.5.3",
+    "@ionic-native/google-maps": "^4.6.0",
     "@ionic-native/google-plus": "^4.5.3",
     "@ionic-native/native-storage": "^3.8.0",
-    "@ionic-native/splash-screen": "3.6.1",
+    "@ionic-native/splash-screen": "^3.6.1",
     "@ionic-native/sqlite": "^4.5.3",
-    "@ionic-native/status-bar": "^3.6.1",
+    "@ionic-native/status-bar": "^3.14.0",
     "@ionic-native/twitter-connect": "^4.5.3",
     "@ionic/storage": "2.0.1",
     "cordova-ios": "^4.4.0",
@@ -98,17 +98,17 @@
       "cordova-plugin-ionic-webview": {},
       "cordova-plugin-ionic-keyboard": {},
       "cordova.plugins.diagnostic": {},
-      "cordova-plugin-googlemaps": {
-        "API_KEY_FOR_ANDROID": "AIzaSyDPlccfGa3xToFZhOTr8-l-JuqfwmWNMho",
-        "PLAY_SERVICES_VERSION": "11.+",
-        "ANDROID_SUPPORT_V4_VERSION": "24.1.0"
-      },
       "cordova-plugin-camera": {},
       "cordova-plugin-geolocation": {
         "GEOLOCATION_USAGE_DESCRIPTION": "To locate you"
       },
       "cordova-sqlite-storage": {},
-      "cordova-plugin-background-mode": {}
+      "cordova-plugin-background-mode": {},
+      "cordova-plugin-googlemaps": {
+        "API_KEY_FOR_ANDROID": "AIzaSyDPlccfGa3xToFZhOTr8-l-JuqfwmWNMho",
+        "PLAY_SERVICES_VERSION": "11.8.0",
+        "ANDROID_SUPPORT_V4_VERSION": "24.1.0"
+      }
     },
     "platforms": [
       "ios"
