--- a/package.json
+++ b/package.json
@@ -24,11 +24,12 @@
     "@ionic-native/background-mode": "^4.6.0",
     "@ionic-native/camera": "^4.5.3",
     "@ionic-native/core": "3.6.1",
+    "@ionic-native/device": "^4.6.0",
     "@ionic-native/diagnostic": "^4.5.3",
     "@ionic-native/facebook": "^3.8.0",
     "@ionic-native/geolocation": "^4.5.3",
     "@ionic-native/google-maps": "^4.6.0",
-    "@ionic-native/google-plus": "^4.5.3",
+    "@ionic-native/google-plus": "^4.6.0",
     "@ionic-native/native-storage": "^3.14.0",
     "@ionic-native/splash-screen": "^3.6.1",
     "@ionic-native/sqlite": "^4.5.3",
@@ -53,7 +54,6 @@
     "cordova-sqlite-storage": "^2.2.1",
     "cordova.plugins.diagnostic": "^4.0.3",
     "ionic-angular": "3.2.1",
-    "ionic-plugin-keyboard": "^2.2.1",
     "ionicons": "3.0.0",
     "rxjs": "5.1.1",
     "sw-toolbox": "3.6.0",
@@ -84,13 +84,12 @@
       "cordova-plugin-splashscreen": {},
       "cordova-plugin-statusbar": {},
       "cordova-plugin-whitelist": {},
-      "ionic-plugin-keyboard": {},
       "cordova-plugin-facebook4": {
         "APP_ID": "341528959587342",
         "APP_NAME": "testing"
       },
       "cordova-plugin-googleplus": {
-        "REVERSED_CLIENT_ID": "com.googleusercontent.apps.32rp9dfllsod9c09j8e28f12f6qjgfb8-42861637941"
+        "REVERSED_CLIENT_ID": "501002503984-17f8oelmlj3vg42n7rq81g041hob91v9.apps.googleusercontent.com"
       },
       "twitter-connect-plugin": {
         "FABRIC_KEY": "145356136bd94d302cef95ab7c4aad33018ca72b"
