--- a/package.json
+++ b/package.json
@@ -22,12 +22,12 @@
     "@angular/platform-browser": "4.1.0",
     "@angular/platform-browser-dynamic": "4.1.0",
     "@ionic-native/background-mode": "^4.6.0",
-    "@ionic-native/camera": "^4.5.3",
+    "@ionic-native/camera": "^4.6.0",
     "@ionic-native/core": "3.6.1",
     "@ionic-native/device": "^4.6.0",
     "@ionic-native/diagnostic": "^4.5.3",
-    "@ionic-native/facebook": "^3.8.0",
-    "@ionic-native/geolocation": "^4.5.3",
+    "@ionic-native/facebook": "^3.14.0",
+    "@ionic-native/geolocation": "^4.6.0",
     "@ionic-native/google-maps": "^4.6.0",
     "@ionic-native/google-plus": "^4.6.0",
     "@ionic-native/native-storage": "^3.14.0",
@@ -36,6 +36,7 @@
     "@ionic-native/status-bar": "^3.14.0",
     "@ionic-native/twitter-connect": "^4.5.3",
     "@ionic/storage": "2.0.1",
+    "android-versions": "^1.3.0",
     "cordova-ios": "^4.4.0",
     "cordova-plugin-background-mode": "^0.7.2",
     "cordova-plugin-camera": "^4.0.2",
