--- a/package.json
+++ b/package.json
@@ -59,7 +59,8 @@
     "rxjs": "5.1.1",
     "sw-toolbox": "3.6.0",
     "twitter-connect-plugin": "^0.6.0",
-    "zone.js": "0.8.10"
+    "zone.js": "0.8.10",
+    "cordova-android": "~6.1.2"
   },
   "devDependencies": {
     "@ionic/app-scripts": "1.3.7",
@@ -111,7 +112,8 @@
       }
     },
     "platforms": [
-      "ios"
+      "ios",
+      "android"
     ]
   }
 }
