--- a/package.json
+++ b/package.json
@@ -59,8 +59,7 @@
     "rxjs": "5.1.1",
     "sw-toolbox": "3.6.0",
     "twitter-connect-plugin": "^0.6.0",
-    "zone.js": "0.8.10",
-    "cordova-android": "~6.1.2"
+    "zone.js": "0.8.10"
   },
   "devDependencies": {
     "@ionic/app-scripts": "1.3.7",
@@ -91,7 +90,7 @@
         "APP_NAME": "testing"
       },
       "cordova-plugin-googleplus": {
-        "REVERSED_CLIENT_ID": "501002503984-17f8oelmlj3vg42n7rq81g041hob91v9.apps.googleusercontent.com"
+        "REVERSED_CLIENT_ID": "com.googleusercontent.apps.501002503984-17f8oelmlj3vg42n7rq81g041hob91v9"
       },
       "twitter-connect-plugin": {
         "FABRIC_KEY": "145356136bd94d302cef95ab7c4aad33018ca72b"
@@ -112,8 +111,7 @@
       }
     },
     "platforms": [
-      "ios",
-      "android"
+      "ios"
     ]
   }
 }
