--- a/package.json
+++ b/package.json
@@ -25,12 +25,13 @@
     "@ionic-native/camera": "^4.6.0",
     "@ionic-native/core": "3.6.1",
     "@ionic-native/device": "^4.6.0",
-    "@ionic-native/diagnostic": "^4.5.3",
+    "@ionic-native/diagnostic": "^4.6.0",
     "@ionic-native/facebook": "^3.14.0",
     "@ionic-native/geolocation": "^4.6.0",
     "@ionic-native/google-maps": "^4.6.0",
     "@ionic-native/google-plus": "^4.6.0",
     "@ionic-native/native-storage": "^3.14.0",
+    "@ionic-native/network": "^4.6.0",
     "@ionic-native/splash-screen": "^3.6.1",
     "@ionic-native/sqlite": "^4.5.3",
     "@ionic-native/status-bar": "^3.14.0",
@@ -49,6 +50,7 @@
     "cordova-plugin-ionic-keyboard": "^2.0.5",
     "cordova-plugin-ionic-webview": "^1.1.16",
     "cordova-plugin-nativestorage": "^2.3.1",
+    "cordova-plugin-network-information": "^2.0.1",
     "cordova-plugin-splashscreen": "^4.1.0",
     "cordova-plugin-statusbar": "^2.4.1",
     "cordova-plugin-whitelist": "^1.3.3",
@@ -90,7 +92,7 @@
         "APP_NAME": "testing"
       },
       "cordova-plugin-googleplus": {
-        "REVERSED_CLIENT_ID": "com.googleusercontent.apps.501002503984-17f8oelmlj3vg42n7rq81g041hob91v9"
+        "REVERSED_CLIENT_ID": "com.googleusercontent.apps.uijf6f9905djpj5667asjldfaulbr95k-72256662760"
       },
       "twitter-connect-plugin": {
         "FABRIC_KEY": "145356136bd94d302cef95ab7c4aad33018ca72b"
@@ -108,7 +110,8 @@
         "API_KEY_FOR_ANDROID": "AIzaSyDPlccfGa3xToFZhOTr8-l-JuqfwmWNMho",
         "PLAY_SERVICES_VERSION": "11.8.0",
         "ANDROID_SUPPORT_V4_VERSION": "24.1.0"
-      }
+      },
+      "cordova-plugin-network-information": {}
     },
     "platforms": [
       "ios"
